--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,8 +5,10 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
-        <item name="windowSplashScreenAnimationDuration">10000</item>  # Required for
-        <item name="postSplashScreenTheme">@style/Theme.AndroidPasswordManager.NoActionBar</item>  # Required.
+        <item name="windowSplashScreenAnimationDuration">10000</item>
+        # Required for
+        <item name="postSplashScreenTheme">@style/Theme.AndroidPasswordManager.NoActionBar</item>
+        # Required.
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryDark</item>
     </style>
 
@@ -21,14 +23,14 @@
         <item name="colorOnSecondary">@color/black</item>
 
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryDark</item>
+<!--        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryDark</item>-->
         <!-- Customize your theme here. -->
     </style>
 
     <style name="Theme.AndroidPasswordManager.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryDark</item>
+<!--        <item name="windowActionBar">false</item>-->
+<!--        <item name="windowNoTitle">true</item>-->
+<!--        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryDark</item>-->
     </style>
 
     <style name="Theme.AndroidPasswordManager.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
